# Labsss-Vasiliev-

./: CMakeLists.txt  avto.cpp  avto.h  datavalidator.cpp  datavalidator.h  fileparser.cpp  fileparser.h  lineparser.cpp  lineparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  proverka.cpp  proverka.h
.github/workflows/: build.yml  ci.yml
data_test/: CMakeLists.txt  tst_data.cpp
